--- a/KHDL_CK/cleandata_ck.ipynb
+++ b/KHDL_CK/cleandata_ck.ipynb
@@ -45,7 +45,6 @@
         "                  pd.read_csv('/content/dongho_haitrieu.csv'),]\n",
         "\n",
         "data = pd.concat(raw_data_files, ignore_index=True)\n",
-        "data.drop('Unnamed: 0',axis=1,inplace=True)\n",
         "data.info()"
       ],
       "metadata": {
@@ -53,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_at8kqO7G3DA",
-        "outputId": "59f4aa0c-a092-4fb2-e049-a202af7382b8"
+        "outputId": "51d0e2b1-8a98-4c54-f123-b9603175a4b5"
       },
-      "execution_count": 8,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zy3LCOZ6WAoC",
-        "outputId": "415e3d31-f178-4f49-ac06-5678855c3a45"
+        "outputId": "a6ca6dd0-2f6e-4b3f-8893-1504f346adac"
       },
-      "execution_count": 9,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,12 +141,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 545
+          "height": 644
         },
         "id": "BOXSEVZjKMRi",
-        "outputId": "12d17c7c-3c61-4baf-e6cc-6a09512eec12"
+        "outputId": "3b88a0e1-b1f6-4262-ecf7-ad8e2d6df0f3"
       },
-      "execution_count": 10,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +156,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 40
         },
         {
           "output_type": "display_data",
@@ -193,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yq4eMrsaLFfS",
-        "outputId": "c0e33a66-a54f-4065-dac1-fc28015fd5cc"
+        "outputId": "d666ae9c-0993-4262-ff0e-689dd353deae"
       },
-      "execution_count": 12,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +246,7 @@
       "metadata": {
         "id": "TwUqGdjbLenD"
       },
-      "execution_count": 13,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -260,9 +259,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dbaba6d9-4fde-4b82-af64-20ae4061b99b"
+        "outputId": "7ca53d11-5dcc-4bd7-9b54-ef8caad9bc8c"
       },
-      "execution_count": 14,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,9 +294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E6HfPsOQVMUR",
-        "outputId": "d36b5a8b-5e3a-4c53-cbe1-de6d6be94b75"
+        "outputId": "c87d80af-fe4a-4e15-dcd8-9457ca726554"
       },
-      "execution_count": 15,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,22 +351,32 @@
       "metadata": {
         "id": "2qP6JBWuV-BX"
       },
-      "execution_count": 16,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "print(\"kich thuoc :\" ,len(Glass_material))\n",
-        "\n",
-        "for (j,i) in enumerate(Glass_material) :\n",
-        "   print(j,i)"
+        "\n"
       ],
       "metadata": {
-        "id": "7BwwGlZSWiqw"
+        "id": "7BwwGlZSWiqw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc571f5a-5db8-465d-fb93-0c20b474e1b8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "kich thuoc : 3057\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -391,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "clrqGkQfbgLK",
-        "outputId": "d5b56dc7-29ad-4b82-83a1-09c7d04617b5"
+        "outputId": "08bc12da-f3f2-4778-d1b1-a3481089f304"
       },
-      "execution_count": 18,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +448,7 @@
       "metadata": {
         "id": "hsu2E_ymbvcC"
       },
-      "execution_count": 19,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -453,9 +462,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bc896e0-bb2f-4338-efd6-a76f0b92ead6"
+        "outputId": "92acdc2f-c691-4073-f08b-a2cf70ca09d1"
       },
-      "execution_count": 20,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,9 +497,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jfls7L70rJJT",
-        "outputId": "6239e379-8474-4f5b-9d64-183203be0d17"
+        "outputId": "4e9772f7-42a8-4802-a7f4-e5cfde83f442"
       },
-      "execution_count": 21,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +547,7 @@
       "metadata": {
         "id": "hmRVHoA7ngyX"
       },
-      "execution_count": 22,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -551,9 +560,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bHWDLnv0Aba",
-        "outputId": "91857b44-0b06-44f4-9919-5edf92a9562c"
+        "outputId": "e99e36d7-efa4-4374-c716-252abd8f93ca"
       },
-      "execution_count": 23,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,9 +595,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bu-j89gx8N5-",
-        "outputId": "30080240-7a5d-418f-be0f-c66d338a2146"
+        "outputId": "634d95b9-2504-4023-976b-c444a65b6896"
       },
-      "execution_count": 24,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +642,7 @@
       "metadata": {
         "id": "WLI9rZlG8jjf"
       },
-      "execution_count": 25,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -646,9 +655,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef024e54-9546-4e7c-f276-2ac26719bd8e"
+        "outputId": "18596f80-5eb4-420a-8eb8-6db8407f16b5"
       },
-      "execution_count": 26,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,9 +690,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T7GltrFA_akM",
-        "outputId": "02691dff-6640-44a3-9fd7-daffa6ee2284"
+        "outputId": "4cbaffca-ca5a-4e9f-a306-56c2a4480199"
       },
-      "execution_count": 27,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +734,7 @@
       "metadata": {
         "id": "TV7uutEC_szW"
       },
-      "execution_count": 28,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -738,9 +747,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "678f78a4-664c-4947-87ee-f8d83111ac72"
+        "outputId": "2780f808-3cf5-4cb2-da23-5873002ad03b"
       },
-      "execution_count": 29,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,9 +782,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BauYcI9cCQsu",
-        "outputId": "5bca42a8-0234-4085-c6fc-c8c310a2aca2"
+        "outputId": "c59b93d1-b09b-451e-fb5b-2e7cb2cede30"
       },
-      "execution_count": 30,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,21 +822,31 @@
       "metadata": {
         "id": "LeeMxNHaCnOC"
       },
-      "execution_count": 42,
+      "execution_count": 60,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(\"kich thuoc :\" ,len(Agency))\n",
-        "for i in Agency :\n",
-        "  print(i)"
+        "print(\"kich thuoc :\" ,len(Agency))\n"
       ],
       "metadata": {
-        "id": "bwBAG0rCD1K5"
+        "id": "bwBAG0rCD1K5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dae67204-d8a2-4ae6-fbf0-d1d5d56a5bf4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "kich thuoc : 3057\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -851,9 +870,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X2q_sraKEQ4M",
-        "outputId": "e5d936d2-a35d-41ae-81c9-fb95de90c19b"
+        "outputId": "e7625e47-8a91-453c-c157-19d3fc1e85f8"
       },
-      "execution_count": 32,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,6 +897,23 @@
     {
       "cell_type": "code",
       "source": [
+        "def round_price(number) :\n",
+        "  last_three_digits = int(str(number)[-3:])  # Lấy 3 chữ số cuối\n",
+        "  if last_three_digits < 500:\n",
+        "    rounded_number = (int(number) // 1000) * 1000  # Làm tròn xuống hàng nghìn gần nhất\n",
+        "  else:\n",
+        "    rounded_number = ((int(number) + 500) // 1000) * 1000  # Làm tròn lên hàng nghìn gần nhất\n",
+        "  return rounded_number"
+      ],
+      "metadata": {
+        "id": "MYojUNoUyJPC"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import random\n",
         "Price = []\n",
         "\n",
@@ -885,14 +921,14 @@
         "  i = str(i)\n",
         "  if 'nan' in i :\n",
         "    random_number = random.randint(500000, 5000000)\n",
-        "    Price.append(random_number)\n",
+        "    Price.append(round_price(random_number))\n",
         "  else :\n",
-        "    Price.append(i.replace(\".\", \"\").replace(\"₫\", \"\").replace('đ',''))"
+        "    Price.append(round_price(i.replace(\".\", \"\").replace(\"₫\", \"\").replace('đ','')))"
       ],
       "metadata": {
         "id": "8ODJxWdQEfIG"
       },
-      "execution_count": 33,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -905,9 +941,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c96e1186-07dc-471d-f631-8ff57963a73b"
+        "outputId": "14c068fc-30b7-425d-dfbf-27fddeba3cb2"
       },
-      "execution_count": 34,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -942,9 +978,9 @@
           "height": 206
         },
         "id": "IVkwWyP_csWB",
-        "outputId": "0b218290-a109-475d-e25d-8b1049529465"
+        "outputId": "5902b0d5-ba16-4427-8513-34497cb46322"
       },
-      "execution_count": 44,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,15 +994,15 @@
               "4          45.4  Mineral Crystal    dây cao su        Quartz         20   \n",
               "\n",
               "     Origin  agency    Price  \n",
-              "0  Nhật Bản   Casio  5695200  \n",
-              "1  Nhật Bản   Casio  5695200  \n",
-              "2  Nhật Bản   Casio  5515200  \n",
+              "0  Nhật Bản   Casio  5695000  \n",
+              "1  Nhật Bản   Casio  5695000  \n",
+              "2  Nhật Bản   Casio  5515000  \n",
               "3  Nhật Bản   Casio  4752000  \n",
-              "4  Nhật Bản   Casio  5515200  "
+              "4  Nhật Bản   Casio  5515000  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9f736173-8962-47a4-bd62-31f0c69e624a\">\n",
+              "  <div id=\"df-8e3ab77e-07d9-45e2-b946-89428e7542b9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1006,7 +1042,7 @@
               "      <td>20</td>\n",
               "      <td>Nhật Bản</td>\n",
               "      <td>Casio</td>\n",
-              "      <td>5695200</td>\n",
+              "      <td>5695000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1017,7 +1053,7 @@
               "      <td>20</td>\n",
               "      <td>Nhật Bản</td>\n",
               "      <td>Casio</td>\n",
-              "      <td>5695200</td>\n",
+              "      <td>5695000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1028,7 +1064,7 @@
               "      <td>20</td>\n",
               "      <td>Nhật Bản</td>\n",
               "      <td>Casio</td>\n",
-              "      <td>5515200</td>\n",
+              "      <td>5515000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1050,12 +1086,12 @@
               "      <td>20</td>\n",
               "      <td>Nhật Bản</td>\n",
               "      <td>Casio</td>\n",
-              "      <td>5515200</td>\n",
+              "      <td>5515000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9f736173-8962-47a4-bd62-31f0c69e624a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e3ab77e-07d9-45e2-b946-89428e7542b9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1106,12 +1142,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9f736173-8962-47a4-bd62-31f0c69e624a button.colab-df-convert');\n",
+              "          document.querySelector('#df-8e3ab77e-07d9-45e2-b946-89428e7542b9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9f736173-8962-47a4-bd62-31f0c69e624a');\n",
+              "          const element = document.querySelector('#df-8e3ab77e-07d9-45e2-b946-89428e7542b9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1134,14 +1170,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 66
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#**Save to Excel**"
+        "#**Save to CSV**"
       ],
       "metadata": {
         "id": "6cCF12mhXPNP"
@@ -1157,7 +1193,7 @@
       "metadata": {
         "id": "15BJCsvpgn0t"
       },
-      "execution_count": 45,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -1170,9 +1206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XkoF3TyxdENA",
-        "outputId": "f7ce1f84-6664-4cfd-e954-51cf4c7adb1a"
+        "outputId": "3c10ef35-0f25-4082-88ff-ad597ac8a563"
       },
-      "execution_count": 46,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1235,7 @@
       "metadata": {
         "id": "8GzVAZO7dNb2"
       },
-      "execution_count": 47,
+      "execution_count": 69,
       "outputs": []
     }
   ]
