--- a/KHDL_CK/cleandata_ck.ipynb
+++ b/KHDL_CK/cleandata_ck.ipynb
@@ -52,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_at8kqO7G3DA",
-        "outputId": "51d0e2b1-8a98-4c54-f123-b9603175a4b5"
+        "outputId": "9c4b5b0a-0def-4427-b95e-7dd098bb217f"
       },
-      "execution_count": 38,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zy3LCOZ6WAoC",
-        "outputId": "a6ca6dd0-2f6e-4b3f-8893-1504f346adac"
+        "outputId": "2424c1bc-3b05-4e07-b9e4-c99f92f43021"
       },
-      "execution_count": 39,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,9 +144,9 @@
           "height": 644
         },
         "id": "BOXSEVZjKMRi",
-        "outputId": "3b88a0e1-b1f6-4262-ecf7-ad8e2d6df0f3"
+        "outputId": "93cb7f3d-d8ef-498e-d611-23c5fabbf56c"
       },
-      "execution_count": 40,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +156,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
@@ -192,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yq4eMrsaLFfS",
-        "outputId": "d666ae9c-0993-4262-ff0e-689dd353deae"
+        "outputId": "0ae1e605-5183-4bfc-bca4-41312568fa7a"
       },
-      "execution_count": 41,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
       "metadata": {
         "id": "TwUqGdjbLenD"
       },
-      "execution_count": 42,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -259,9 +259,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7ca53d11-5dcc-4bd7-9b54-ef8caad9bc8c"
+        "outputId": "0020b46e-b148-4e22-c6a7-55a5450ac8c6"
       },
-      "execution_count": 43,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,9 +294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E6HfPsOQVMUR",
-        "outputId": "c87d80af-fe4a-4e15-dcd8-9457ca726554"
+        "outputId": "225673d2-b667-43ec-a7da-25b5b9af29c3"
       },
-      "execution_count": 44,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
       "metadata": {
         "id": "2qP6JBWuV-BX"
       },
-      "execution_count": 45,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -365,9 +365,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bc571f5a-5db8-465d-fb93-0c20b474e1b8"
+        "outputId": "aba2fdc3-6627-4957-bf78-9c02f289e6d2"
       },
-      "execution_count": 46,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "clrqGkQfbgLK",
-        "outputId": "08bc12da-f3f2-4778-d1b1-a3481089f304"
+        "outputId": "b9b4a7d7-7ba5-4f53-fa7a-99170f2209e4"
       },
-      "execution_count": 47,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
       "metadata": {
         "id": "hsu2E_ymbvcC"
       },
-      "execution_count": 48,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -462,9 +462,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "92acdc2f-c691-4073-f08b-a2cf70ca09d1"
+        "outputId": "e44c8f84-f837-42b6-c07d-74d934bb09b7"
       },
-      "execution_count": 49,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,9 +497,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jfls7L70rJJT",
-        "outputId": "4e9772f7-42a8-4802-a7f4-e5cfde83f442"
+        "outputId": "7dad6c3e-71db-4ce9-fef4-df09d2395d30"
       },
-      "execution_count": 50,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
       "metadata": {
         "id": "hmRVHoA7ngyX"
       },
-      "execution_count": 51,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -560,9 +560,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bHWDLnv0Aba",
-        "outputId": "e99e36d7-efa4-4374-c716-252abd8f93ca"
+        "outputId": "b94d2504-236e-435e-e534-763341090bb9"
       },
-      "execution_count": 52,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,9 +595,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bu-j89gx8N5-",
-        "outputId": "634d95b9-2504-4023-976b-c444a65b6896"
+        "outputId": "dbf3316d-4d5d-4349-97ce-827fc387a1ac"
       },
-      "execution_count": 53,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +642,7 @@
       "metadata": {
         "id": "WLI9rZlG8jjf"
       },
-      "execution_count": 54,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -655,9 +655,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18596f80-5eb4-420a-8eb8-6db8407f16b5"
+        "outputId": "7b9a45b8-44fe-4ece-eaa3-c8342f385574"
       },
-      "execution_count": 55,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,9 +690,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T7GltrFA_akM",
-        "outputId": "4cbaffca-ca5a-4e9f-a306-56c2a4480199"
+        "outputId": "6138842c-7e93-4b2b-8672-100790521785"
       },
-      "execution_count": 56,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +734,7 @@
       "metadata": {
         "id": "TV7uutEC_szW"
       },
-      "execution_count": 57,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -747,9 +747,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2780f808-3cf5-4cb2-da23-5873002ad03b"
+        "outputId": "43ec1131-345b-4f87-80e4-81c311c7980f"
       },
-      "execution_count": 58,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,9 +782,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BauYcI9cCQsu",
-        "outputId": "c59b93d1-b09b-451e-fb5b-2e7cb2cede30"
+        "outputId": "e77758cc-6f56-42f9-dbd9-b6d718a74828"
       },
-      "execution_count": 59,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,16 +813,24 @@
         "Agency = []\n",
         "\n",
         "for i in data['Agency'] :\n",
-        "  i = str(i).split('(')[0]\n",
+        "  i = str(i)\n",
         "  if ('nan' in i) or ('nam' in i.lower()) :\n",
         "    Agency.append('Casio')\n",
         "  else :\n",
-        "    Agency.append(i)"
+        "    arr = i.split('(')\n",
+        "\n",
+        "    if len(arr) > 1 :\n",
+        "      if 'giới hạn' in i.split('(')[1].lower() :\n",
+        "          Agency.append(i)\n",
+        "      else :\n",
+        "        Agency.append(i.split('(')[0])\n",
+        "    else :\n",
+        "        Agency.append(i.split('(')[0])"
       ],
       "metadata": {
         "id": "LeeMxNHaCnOC"
       },
-      "execution_count": 60,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -835,9 +843,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dae67204-d8a2-4ae6-fbf0-d1d5d56a5bf4"
+        "outputId": "2c446660-fc5a-47aa-cd33-870c3039429b"
       },
-      "execution_count": 61,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,9 +878,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X2q_sraKEQ4M",
-        "outputId": "e7625e47-8a91-453c-c157-19d3fc1e85f8"
+        "outputId": "c797325e-6908-4a00-da5d-a884548d662a"
       },
-      "execution_count": 62,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +916,7 @@
       "metadata": {
         "id": "MYojUNoUyJPC"
       },
-      "execution_count": 63,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -919,16 +927,12 @@
         "\n",
         "for i in data['price'] :\n",
         "  i = str(i)\n",
-        "  if 'nan' in i :\n",
-        "    random_number = random.randint(500000, 5000000)\n",
-        "    Price.append(round_price(random_number))\n",
-        "  else :\n",
-        "    Price.append(round_price(i.replace(\".\", \"\").replace(\"₫\", \"\").replace('đ','')))"
+        "  Price.append(round_price(i.replace(\".\", \"\").replace(\"₫\", \"\").replace('đ','')))"
       ],
       "metadata": {
         "id": "8ODJxWdQEfIG"
       },
-      "execution_count": 64,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -941,9 +945,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "14c068fc-30b7-425d-dfbf-27fddeba3cb2"
+        "outputId": "0dbfd7e2-fc20-4f9e-de48-83fb39d45304"
       },
-      "execution_count": 65,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -978,9 +982,9 @@
           "height": 206
         },
         "id": "IVkwWyP_csWB",
-        "outputId": "5902b0d5-ba16-4427-8513-34497cb46322"
+        "outputId": "432d8e6b-8db2-4e31-efb5-d9b33fdc5ed9"
       },
-      "execution_count": 66,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1002,7 +1006,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8e3ab77e-07d9-45e2-b946-89428e7542b9\">\n",
+              "  <div id=\"df-a035f749-26b3-4864-bb96-8ae31a5eba0e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1091,7 +1095,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e3ab77e-07d9-45e2-b946-89428e7542b9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a035f749-26b3-4864-bb96-8ae31a5eba0e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1142,12 +1146,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8e3ab77e-07d9-45e2-b946-89428e7542b9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a035f749-26b3-4864-bb96-8ae31a5eba0e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8e3ab77e-07d9-45e2-b946-89428e7542b9');\n",
+              "          const element = document.querySelector('#df-a035f749-26b3-4864-bb96-8ae31a5eba0e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1170,7 +1174,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 42
         }
       ]
     },
@@ -1193,7 +1197,7 @@
       "metadata": {
         "id": "15BJCsvpgn0t"
       },
-      "execution_count": 67,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1206,9 +1210,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XkoF3TyxdENA",
-        "outputId": "3c10ef35-0f25-4082-88ff-ad597ac8a563"
+        "outputId": "7f50b836-4665-4bd3-9aaa-37062f96ebfd"
       },
-      "execution_count": 68,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,7 +1239,7 @@
       "metadata": {
         "id": "8GzVAZO7dNb2"
       },
-      "execution_count": 69,
+      "execution_count": 45,
       "outputs": []
     }
   ]
